fix main container to be always visible.

--- a/ui/style.css
+++ b/ui/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 #main-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100%;
